--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 pandas>=2.0.0
 pytest>=7.4.0
+pytest-xdist>=3.0.0
 PyYAML==6.0.3
+faker>=18.0.0
+scipy>=1.10.0
+spacy>=3.4.0
+rich>=13.0.0
+black>=25.12.0
+black[jupyter]>=25.12.0
 
